@@ -93,24 +93,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
-  * mod_ssl: Add SSLProxyMachineCertificateChainFile directive
-    Uses openssl to construct a chain for each proxy cert. When a remote server requests
-    a client certificate that is NOT the direct issuer of any available client
-    certificate, the chain for that certificate will be used to trace it to a
-    known CA and that client certificate will be used.
-    Trunk patch: http://svn.apache.org/viewvc?view=revision&revision=1160863
-                 http://svn.apache.org/viewvc?view=revision&revision=1162103
-                 http://svn.apache.org/viewvc?view=revision&revision=1170833
-                 http://svn.apache.org/viewvc?view=revision&revision=1172010
-                 http://svn.apache.org/viewvc?view=revision&revision=1175946
-                 http://svn.apache.org/viewvc?view=revision&revision=1242089
-    2.2.x patch: http://people.apache.org/~druggeri/patches/httpd-2.2-SSLProxyMachineCertificateChainFile.patch
-    +1: druggeri, kbrand, rpluem
-
-  * mod_proxy_ajp: Missing support for ErrorOverride
-    Trunk patch: http://svn.apache.org/viewvc?rev=1087864&view=rev
-    2.2.x patch: http://people.apache.org/~jim/patches/mod_proxy_ajp-erroroverride.patch
-    +1: igalic, jim, rpluem
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
